--- a/axf/static/home/css/home.css
+++ b/axf/static/home/css/home.css
@@ -27,7 +27,7 @@ footer .home .name {
 }
 #topSwiper img{
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 }
 #topSwiper .swiper-pagination{
     bottom: 0px;
