--- a/axf/templates/home/home.html
+++ b/axf/templates/home/home.html
@@ -6,14 +6,96 @@
 {% endblock %}
 
 {% block extcss %}
+    <link rel="stylesheet" href="{% static 'home/css/swiper.min.css' %}">
     <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
-{% block extjs %}
-    <script src="{% static 'home/js/home.js' %}"></script>
-{% endblock %}
 
 {% block content %}
-    首页
+
+    <div class="home">
+
+        <div class="swiper-container" id="topSwiper">
+                <div class="swiper-wrapper">
+                    {% for wheel in wheels %}
+                        <div class="swiper-slide">
+                            <img src="{{ wheel.img }}" alt="{{ wheel.name }}">
+                        </div>
+                    {% endfor %}
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+{#                <!-- Add Arrows -->#}
+{#                <div class="swiper-button-next"></div>#}
+{#                <div class="swiper-button-prev"></div>#}
+            </div>
+
+        <div class="nav">
+            <ul>
+                {% for nav in navs %}
+                    <li>
+                        <img src="{{ nav.img }}" alt="">
+                        <p>{{ nav.name }}</p>
+                    </li>
+                {% endfor %}
+
+            </ul>
+        </div>
+
+        <div class="swiper-container" id="mustbuySwiper">
+                <div class="swiper-wrapper">
+                    {% for mustbuy in mustbuys %}
+                        <div class="swiper-slide">
+                            <img src="{{ mustbuy.img }}" alt="{{ mustbuy.name }}">
+                        </div>
+                    {% endfor %}
+                </div>
+                <!-- Add Pagination -->
+                <div class="swiper-pagination"></div>
+{#                <!-- Add Arrows -->#}
+{#                <div class="swiper-button-next"></div>#}
+{#                <div class="swiper-button-prev"></div>#}
+            </div>
+
+        <div class="shop">
+            <div class="shophead">
+                <a href="">
+                    <img src="{{ shophead.img }}" alt="">
+                </a>
+            </div>
+            <div class="shoptab">
+                {% for shoptab in shoptabs %}
+                    <a href="">
+                        <img src="{{ shoptab.img }}" alt="">
+                    </a>
+                {% endfor %}
+            </div>
+            <ul class="shopclass">
+                {% for shopclass in shopclasss %}
+                    <li>
+                        <a href="">
+                            <img src="{{ shopclass.img }}" alt="">
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+            <ul class="shopcommend">
+                {% for shopcommend in shopcommends %}
+                    <li>
+                        <a href="">
+                            <img src="{{ shopcommend.img }}" alt="">
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+
+    </div>
+
+
 {% endblock %}
 
+{% block extjs %}
+    <script src="{% static 'home/js/swiper.min.js' %}"></script>
+    <script src="{% static 'home/js/home.js' %}"></script>
+{% endblock %}
