--- a/axf/templates/home/home.html
+++ b/axf/templates/home/home.html
@@ -90,6 +90,55 @@
             </ul>
         </div>
 
+        <div class="main">
+            {% for mainshow in mainshows %}
+                <div class="main-wrapper">
+                    <div class="title">
+                        {{ mainshow.name }}
+                        <a href="#">更多</a>
+                        <span></span>
+                    </div>
+
+                    <div class="headimg">
+                        <img src="{{ mainshow.img }}" alt="">
+                    </div>
+
+                    <div class="shoplist">
+                        <div class="shopitem">
+                            <a href="#">
+                                <img class="img" src="{{ mainshow.img1 }}" alt="">
+                                <div class="desc">{{ mainshow.longname1 }}</div>
+                                <span class="price">{{ mainshow.price1 }}</span>
+                                <span class="marketprice">{{ mainshow.marketprice1 }}</span>
+                            </a>
+                            <button><span>+</span></button>
+                        </div>
+
+                        <div class="shopitem">
+                            <a href="#">
+                                <img class="img" src="{{ mainshow.img2 }}" alt="">
+                                <div class="desc">{{ mainshow.longname2 }}</div>
+                                <span class="price">{{ mainshow.price2 }}</span>
+                                <span class="marketprice">{{ mainshow.marketprice2 }}</span>
+                            </a>
+                            <button><span>+</span></button>
+                        </div>
+
+                        <div class="shopitem">
+                            <a href="#">
+                                <img class="img" src="{{ mainshow.img3 }}" alt="">
+                                <div class="desc">{{ mainshow.longname3 }}</div>
+                                <span class="price">{{ mainshow.price3 }}</span>
+                                <span class="marketprice">{{ mainshow.marketprice3 }}</span>
+                            </a>
+                            <button><span>+</span></button>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+        </div>
+
     </div>
 
 
