--- a/axf/templates/market/market.html
+++ b/axf/templates/market/market.html
@@ -48,7 +48,9 @@
             </ul>
         </nav>
 
-        <div class="main-content"></div>
+        <div class="main-content">
+
+        </div>
     </div>
 {% endblock %}
 
