超市页面展示 业务逻辑大部分完成 剩余添加购物车操作

--- a/axf/templates/base/base.html
+++ b/axf/templates/base/base.html
@@ -44,7 +44,7 @@
                 <div class="name">首页</div>
             </div>
         </a>
-        <a href="{% url 'axf:market' %}" class="market">
+        <a href="{% url 'axf:marketbase' %}" class="market">
             <div class="item">
                 <div class="img"><span></span></div>
                 <div class="name">闪购超市</div>
@@ -66,6 +66,7 @@
 {% endblock %}
 
 <script src="{% static 'base/js/jquery.min_3.3.1.js' %}"></script>
+<script src="{% static 'base/js/jquery.cookie1.4.1.js' %}"></script>
 <script src="{% static 'base/js/bootstrap.min3_3_7.js' %}"></script>
 <script src="{% static 'base/js/base.js' %}"></script>
 
