--- a/axf/templates/market/market.html
+++ b/axf/templates/market/market.html
@@ -19,37 +19,91 @@
         <div class="type-slider">
             <ul>
                 {% for foodtype in foodtypes %}
+                    <li>
+                        <span></span>
+                        <a href="{% url 'axf:marketbase' %}">
                     {% if forloop.counter == foodtype.typesort %}
-                        <a href="#">
-                            <li>
-                                <span></span>
                                 {{ foodtype.typename }}
-                            </li>
-                        </a>
                     {% endif %}
+                        </a>
+                    </li>
                 {% endfor %}
             </ul>
         </div>
 
         <nav>
             <ul>
-                <li>
+                <li class="category-view">
                     <span>
                         全部类型
-                        <i class="glyphicon glyphicon-menu-down"></i>
+                        <i class="glyphicon glyphicon-menu-up"></i>
                     </span>
                 </li>
-                <li>
+                <li class="sort-view">
                     <span>
                         综合排序
-                        <i class="glyphicon glyphicon-menu-down"></i>
+                        <i class="glyphicon glyphicon-menu-up"></i>
                     </span>
+
                 </li>
             </ul>
         </nav>
 
         <div class="main-content">
+            <div class="content-wrapper">
+                <ul>
+                    {% for goods in goods_list %}
+                        <li>
+                        <a href="#">
+                            <img src="{{ goods.productimg }}" alt="" class="goods-img">
+                            <div class="goods-info">
+                                <p class="name">{{ goods.productlongname }}</p>
+                                <p class="detailtag">
+                                    {% if  goods.isxf %}
+                                        <span class="xf">精选</span>
+                                    {% endif %}
+                                    <span>销量: {{ goods.productnum }}</span>
+                                </p>
+                                <p class="specifics">{{ goods.specifics }}</p>
+                                <p class="price">
+                                    <span class="now-price">{{ goods.price }}</span>
+                                    <span class="market-price">{{ goods.marketprice }}</span>
+                                </p>
+                            </div>
+                        </a>
 
+                        <div class="bt-wrapper">
+                            <span class="glyphicon glyphicon-minus"></span>
+                            <span class="num">1</span>
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </div>
+                        <div class="bt-wrapper"></div>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+
+            <div class="bounce-view" id="category-bt">
+                <div class="bounce-wrapper">
+                    {% for childtype in childtype_list %}
+                        <a href="{% url 'axf:market' childtype.id 0 %}">
+                            {{ childtype.childname }}
+                        </a>
+                    {% endfor %}
+                    
+                </div>
+            </div>
+
+            <div class="bounce-view"  id="sort-bt">
+                <div class="bounce-wrapper">
+                    <a href="{% url 'axf:market' childid 0 %}">综合排序</a>
+                    <a href="{% url 'axf:market' childid 1 %}">销量排序</a>
+                    <a href="{% url 'axf:market' childid 2 %}">价格最低</a>
+                    <a href="{% url 'axf:market' childid 3 %}">价格最高</a>
+                </div>
+            </div>
+                <div class="bounce-wrapper">
+            </div>
         </div>
     </div>
 {% endblock %}
