--- a/axf/templates/mine/mine.html
+++ b/axf/templates/mine/mine.html
@@ -14,6 +14,106 @@
 {% endblock %}
 
 {% block content %}
-    我的
+    <div class="mine">
+        <div class="user-wrapper">
+            <div class="user-img">
+                <img src="{% static 'mine/img/axf.png' %}" alt="">
+            </div>
+            <div class="user-content">
+                <p>
+                    <span class="glyphicon glyphicon-user"></span>
+                    <span>{{ user.name | default:'未登录' }}</span>
+                </p>
+                <p>
+                    <span class="glyphicon glyphicon-fire"></span>
+                    <span>VIP:{{ user.rank | default:'无' }}</span>
+                </p>
+                {% if user == None %}
+                    <a class="register" href="{% url 'axf:register' %}">注册</a>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="collect">
+            <span class="
+glyphicon glyphicon-heart"></span>
+            <span>商品收藏</span>
+        </div>
+
+        <div class="other">
+            <section class="my">
+                <span>我的订单</span>
+                <a href="#">查看全部订单<i class="glyphicon glyphicon-chevron-right"></i></a>
+            </section>
+
+            <section>
+                <ul>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-usd"></dt>
+                            <dd>代付款</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-envelope"></dt>
+                            <dd>代收货</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-pencil"></dt>
+                            <dd>代评价</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-usd"></dt>
+                            <dd>退款/售后</dd>
+                        </dl>
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <ul>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-credit-card"></dt>
+                            <dd>优惠券</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-import"></dt>
+                            <dd>收货地址</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-phone-alt"></dt>
+                            <dd>客服/反馈</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt class="glyphicon glyphicon-certificate"></dt>
+                            <dd>关于我们</dd>
+                        </dl>
+                    </li>
+                </ul>
+            </section>
+
+
+            {% if user %}
+                <section>
+                    <div class="quit">
+                        <a href="{% url 'axf:logout' %}">退出</a>
+                    </div>
+                </section>
+            {% endif %}
+
+        </div>
+    </div>
 {% endblock %}
 
