--- a/axf/templates/cart/cart.html
+++ b/axf/templates/cart/cart.html
@@ -31,8 +31,8 @@
                         </div>
                         <div class="detail">
                             <div class="name">{{ cart.goods.productlongname }}</div>
-                            <div class="price">￥{{ cart.goods.price }}</div>
-                            <div class="num">x{{ cart.number }}</div>
+                            <div class="price" data-price="{{ cart.goods.price }}">￥{{ cart.goods.price }}</div>
+                            <div class="num" data-num="{{ cart.number }}">x{{ cart.number }}</div>
                         </div>
                     </div>
                 </li>
@@ -41,8 +41,13 @@
         </ul>
         <div class="bill">
             <div class="bill-left">
-                <div class="all"  data-all="{{ isall }}">
-                    <span class="glyphicon glyphicon-ok"></span>
+                <div class="all" data-all="{{ isall|lower }}">
+                    {% if isall %}
+                        <span class="glyphicon glyphicon-ok"></span>
+                    {% else %}
+                        <span class="no"></span>
+                    {% endif %}
+
                     <b>全选</b>
                 </div>
 
