--- a/axf/templates/cart/cart.html
+++ b/axf/templates/cart/cart.html
@@ -56,7 +56,7 @@
                     <b>3163</b>
                 </div>
             </div>
-            <div class="bill-right">下单</div>
+            <a class="bill-right">下单</a>
         </div>
     </div>
 {% endblock %}
