--- a/axf/templates/cart/cart.html
+++ b/axf/templates/cart/cart.html
@@ -56,7 +56,7 @@
                     <b>3163</b>
                 </div>
             </div>
-            <a class="bill-right">下单</a>
+            <a class="bill-right" href="{% url 'axf:genenateorder' %}">下单</a>
         </div>
     </div>
 {% endblock %}
