--- a/axf/templates/mine/mine.html
+++ b/axf/templates/mine/mine.html
@@ -48,7 +48,7 @@ glyphicon glyphicon-heart"></span>
         <div class="other">
             <section class="my">
                 <span>我的订单</span>
-                <a href="#">查看全部订单<i class="glyphicon glyphicon-chevron-right"></i></a>
+                <a href="{% url 'axf:orderlist' %}">查看全部订单<i class="glyphicon glyphicon-chevron-right"></i></a>
             </section>
 
             <section>
